--- a/.github/workflows/Python-package.yml
+++ b/.github/workflows/Python-package.yml
@@ -1,5 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python version 3.7
-
 name: Python package
 
 on:
@@ -16,7 +14,7 @@ jobs:
         python-version: [3.7]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses:actions/checkout@v2
     - name: Set up Python 3.7
       uses:actions/setup-python@v2
       with:
@@ -28,4 +26,4 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        pytest YOURFILE.py
+        pytest test_calculator.py
